Bug 962855 - fix scrollbar appearing in default set on Australis, r=mconley
UltraBlame original commit: 44e2470187010a533fa8bd5d585818a6f184e80a

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -510,7 +510,9 @@ toolbarpaletteitem[place="palette"] > #search-container {
 
   min-width: calc(@menuPanelWidth@ / 3 - 2px);
   max-width: calc(@menuPanelWidth@ / 3 - 2px);
-  height: auto;
+  
+
+  height: calc(2.2em + 4px);
   max-height: none;
   -moz-box-orient: horizontal;
 }
